--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pavlos-web-bootstrap",
+  "name": "pavlos-taxi",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "npm:rolldown-vite@7.2.5"
+    "vite": "npm:rolldown-vite@^7.2.5"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.5"
